--- a/ai/index.html
+++ b/ai/index.html
@@ -2,6 +2,7 @@
 <html ⚡ lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="ai.css">
         <meta name="description" content="Will Schmidt's AI Timeline">
         <title>AI Timeline</title>
     </head>
