--- a/ashos/index.html
+++ b/ashos/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta title="ARG Test">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="ashos.css">
     </head>
     <body>
         <div>
